# KG_Demo

./: .gitignore  GRADIO_README.md  GRADIO_WORKFLOW_README.md  README.md  cases.md  demo_dynamic_schema.py  example_schema.yaml  gradio_app.py  gradio_workflow_app.py  main.py  milvus.db  pyproject.toml  start_web.sh  start_web_v3.sh  test_web_events.py  test_workflow_gradio.py  web_app.py  web_app_v3.py
config/: constants.py  constants.py.backup  example_schema.yaml  graph_schema.md  kv_embedding_mapping.json  schema.yaml  财务分析智能体分析场景评测.xlsx
docs/: cypher.md  dynamic_schema_implementation.md  schema_extraction.md
knowledge/: 01.txt  02.txt  docstore.json  index_store.json
knowledge/knowledge_index/: docstore.json  index_store.json
scripts/: extract_schema.py  gen_mapping.py  init_milvus.py  kv_mapping.py  llm_extraction.py  node_schema.py  sync.sh  sync_mapping.py  sync_milvus.py  update_business_mapping.py
src/: core.py  cypher_gen.py  dynamic_schema.py  logger.py  pipeline.py  prompts.py  tools.py  utils.py  workflow.py  workflow_v2.py  workflow_v3.py
src/context/: manager.py  retriever.py
src/graphflow/: graphflow.py  tools.py
src/model/: graph.py  mapping.py  schema.py
src/storage/: milvus_db.py
templates/: index.html  index_v3.html
tests/: schema.json  test_connection.py  test_cypher.py  test_dynamic_schema.py  test_embedding.py  test_extract_schema.py  test_extract_schema_yaml.py  test_knowledge_retrieve.py  test_mapping_gen.py  test_milvus.py  test_milvus_connection.py  test_nebula.py  test_report.py  test_schema_retrieval.py  test_subqueries.py
