[project]
name = "kg-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.14.0",
    "gradio>=5.0.0",
    "llama-index-core>=0.14.1",
    "llama-index-embeddings-ollama>=0.8.3",
    "llama-index-vector-stores-milvus>=0.9.2",
    "milvus>=2.3.9",
    "nebula3-python>=3.8.3",
    "neo4j>=5.28.2",
    "numpy>=2.3.2",
    "ollama>=0.5.3",
    "openai>=1.102.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "pymilvus>=2.6.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.1",
    "rich>=14.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
